--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-lazy-load-image-component": "^1.5.6",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.4.5"
   },
   "devDependencies": {
